--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
         <div class="container">
           <div class="slider employees__slider">
             <div class="slider__content">
-              <div class="slider__left-controls">
-                <img src="./images/icons/control.svg" alt="img left control">
+              <div class="slider__control">
+                <div class="slider__control--left"></div>
               </div>
               <ul class="slider__list">
                 <li class="slider__item">
@@ -402,8 +402,8 @@
                   </div>
                 </li>   
               </ul>
-              <div class="slider__right-controls">
-                <img src="./images/icons/control.svg" alt="img left control">
+              <div class="slider__control">
+                <div class="slider__control--right"></div>
               </div>
             </div>
             <ul class="down-controls__list">
